@@ -2,6 +2,7 @@ package com.azquo.dataimport;
 
 import com.azquo.TypedPair;
 import com.azquo.admin.AdminService;
+import com.azquo.admin.controller.ManageDatabasesController;
 import com.azquo.admin.database.*;
 import com.azquo.admin.onlinereport.*;
 import com.azquo.memorydb.DatabaseAccessToken;
@@ -82,8 +83,9 @@ public final class ImportService {
         // persist on the database server
         SpreadsheetService.databasePersist(loggedInUser);
         // add to the uploaded list on the Manage Databases page
+        // now jamming the import feedback in the comments
         UploadRecord uploadRecord = new UploadRecord(0, LocalDateTime.now(), loggedInUser.getUser().getBusinessId()
-                , loggedInUser.getDatabase().getId(), loggedInUser.getUser().getId(), uploadedFile.getFileName() + (uploadedFile.getReportName() != null ? " - (" + uploadedFile.getReportName() + ")" : ""), "", "", uploadedFile.getPath());//should record the error? (in comment)
+                , loggedInUser.getDatabase().getId(), loggedInUser.getUser().getId(), uploadedFile.getFileName() + (uploadedFile.getReportName() != null ? " - (" + uploadedFile.getReportName() + ")" : ""), "", ManageDatabasesController.formatUploadedFiles(processedUploadedFiles), uploadedFile.getPath());//should record the error? (in comment)
         UploadRecordDAO.store(uploadRecord);
         // and update the counts on the manage database page
         AdminService.updateNameAndValueCounts(loggedInUser, loggedInUser.getDatabase());
