@@ -64,8 +64,8 @@ Created by IntelliJ IDEA.
                     <td>
                         <form method="post"> File Name <input size="20" name="fileSearch"></form>
                     </td>
-                    <!--				<td>File Type</td>
-                                    <td>Comments</td>-->
+                    <!--				<td>File Type</td> -->
+                                    <td></td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -78,8 +78,12 @@ Created by IntelliJ IDEA.
                         <td>${upload.databaseName}</td>
                         <td>${upload.userName}</td>
                         <td>${upload.fileName}</td>
-                        <!--<td>${upload.fileType}</td>
-				<td>${upload.comments}</td> -->
+                        <!--<td>${upload.fileType}</td>-->
+                        <td><c:if test="${upload.comments.length() > 0}">
+                            <a href="/api/ImportResults?urid=${upload.id}" target="new"
+                               class="button inspect small" data-title="Import Results" title="View Import Results">Import Results</a>
+                        </c:if></td>
+
                         <td><c:if test="${upload.downloadable}"><a href="/api/DownloadFile?uploadRecordId=${upload.id}"
                                                                    class="button small" title="Download"><span
                                 class="fa fa-download" title="Download"></span> </a></c:if></td>
